--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <hr/>
     <h1>HTML Page Structure</h1>
     <p>Below is a visulization of an HTML page structure:</p>
-    <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen-->
+    <img src="img/img2.png" alt="">
 </body>
 </html>
